--- a/1st_assign/n_grams.ipynb
+++ b/1st_assign/n_grams.ipynb
@@ -2,55 +2,60 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_text = \"안녕하세요, 현재 진행 중인 수업은 자연어 처리 이론 및 응용 수업 입니다.\""
+    "sample_text = \"Colaboratory(또는 줄여서 'Colab')를 사용하면 브라우저에서 Python을 작성하고 실행할 수 있습니다.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def list2String(str_list):\n",
+    "    result = \"\"\n",
+    "    for s in str_list:\n",
+    "        result += s + \" \"\n",
+    "    return result.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['안녕하세요,', '현재', '진행', '중인']\n",
-      "['수업은', '자연어', '처리', '이론']\n",
-      "['및', '응용', '수업', '입니다.']\n"
+      "10\n",
+      "[\"Colaboratory(또는 줄여서 'Colab')를\", \"줄여서 'Colab')를 사용하면\", \"'Colab')를 사용하면 브라우저에서\", '사용하면 브라우저에서 Python을', '브라우저에서 Python을 작성하고', 'Python을 작성하고 실행할', '작성하고 실행할 수', '실행할 수 있습니다.']\n"
      ]
     }
    ],
    "source": [
     "def get_n_gram(sample_text,n):\n",
-    "    n_gram = [] \n",
+    "    n_gram_list = [] \n",
     "    word_list = sample_text.split() \n",
     "    start = 0 \n",
     "    end = n \n",
-    "    for i in range(round(len(word_list)/n+0.49)):   \n",
-    "        print(word_list[start:end])\n",
-    "        start = start + n \n",
-    "        end = end + n \n",
+    "    print(len(word_list))\n",
+    "    for i in range(len(word_list)-n+1):    #round(len(word_list)/n+0.49)\n",
+    "        n_gram = word_list[start:end]\n",
+    "        n_gram = list2String(n_gram)\n",
+    "        #print(word_list[start:end])\n",
+    "        n_gram_list.append(n_gram)\n",
+    "        start = start + 1\n",
+    "        end = end + 1\n",
     "    #mod = len(word_list)%n\n",
     "    #print(type(word_list))\n",
     "    #print(mod)\n",
     "    #print(word_list[-mod:])\n",
-    "\n",
-    "get_n_gram(sample_text,4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def main():\n",
-    "    if __name__==\"__main__\":\n",
-    "        main() "
+    "    print(n_gram_list)\n",
+    "get_n_gram(sample_text,3)"
    ]
   },
   {
@@ -58,7 +63,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
