--- a/folder/09_21_nlp.ipynb
+++ b/folder/09_21_nlp.ipynb
@@ -1,33 +1,23 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "from collections import Counter\n"
-      ],
+      "execution_count": 123,
       "metadata": {
         "id": "tcRcpB8PMuXS"
       },
-      "execution_count": 123,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from collections import Counter\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "iW6YwQlm9cCq"
+      },
+      "outputs": [],
       "source": [
         "reviews = [\n",
         "('fun,couple,love,love', 'comedy'),\n",
@@ -39,15 +29,15 @@
         "review1 = 'fast,furious,shoot,love'\n",
         "review2 = 'fast,fun,fun,love,fun'\n",
         "review3 = 'fun,fun'"
-      ],
-      "metadata": {
-        "id": "iW6YwQlm9cCq"
-      },
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 62,
+      "metadata": {
+        "id": "tx9hQh-m-j5L"
+      },
+      "outputs": [],
       "source": [
         "def get_prior(reviews):\n",
         "   class_comedy_count = 0 \n",
@@ -60,15 +50,15 @@
         "   priorC = class_comedy_count / 5 \n",
         "   priorA = class_action_count / 5 \n",
         "   return priorA, priorC "
-      ],
-      "metadata": {
-        "id": "tx9hQh-m-j5L"
-      },
-      "execution_count": 62,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 91,
+      "metadata": {
+        "id": "G8IoydzqAGHX"
+      },
+      "outputs": [],
       "source": [
         "def get_words_category(reviews):\n",
         "  A_corpus = \"\"\n",
@@ -89,15 +79,41 @@
         "  \n",
         "\n",
         "wordListA, wordListC = get_words_category(reviews)"
-      ],
-      "metadata": {
-        "id": "G8IoydzqAGHX"
-      },
-      "execution_count": 91,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 121,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "id": "zc97tuz5I9iN",
+        "outputId": "b8cefc3f-b7a0-4bd9-9f5b-861d0e42455c"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['fast', 'furious', 'shoot', 'love']\n"
+          ]
+        },
+        {
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'action'"
+            ]
+          },
+          "execution_count": 121,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "def predict(text): \n",
         "   word_list = text.split(sep = ',')\n",
@@ -124,49 +140,11 @@
         "\n",
         "   \n",
         "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 54
-        },
-        "id": "zc97tuz5I9iN",
-        "outputId": "b8cefc3f-b7a0-4bd9-9f5b-861d0e42455c"
-      },
-      "execution_count": 121,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['fast', 'furious', 'shoot', 'love']\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'action'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 121
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "priorA, priorC = get_prior(reviews)\n",
-        "wordListA, wordListC = get_words_category(reviews)\n",
-        "\n",
-        "print( review1 + ' belongs to '+ predict(review1))\n",
-        "print( review2 + ' belongs to '+ predict(review2))\n",
-        "print( review3 + ' belongs to '+ predict(review3))"
-      ],
+      "execution_count": 127,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -174,11 +152,10 @@
         "id": "vdIDspQD-BK0",
         "outputId": "8dd3beaf-21ed-4e10-ed63-f84e6ff77db6"
       },
-      "execution_count": 127,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['fast', 'furious', 'shoot', 'love']\n",
             "fast,furious,shoot,love belongs to action\n",
@@ -188,16 +165,46 @@
             "fun,fun belongs to comedy\n"
           ]
         }
+      ],
+      "source": [
+        "priorA, priorC = get_prior(reviews)\n",
+        "wordListA, wordListC = get_words_category(reviews)\n",
+        "\n",
+        "print( review1 + ' belongs to '+ predict(review1))\n",
+        "print( review2 + ' belongs to '+ predict(review2))\n",
+        "print( review3 + ' belongs to '+ predict(review3))"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "kegVsr1wM2mP"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.7.13 ('main_env')",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.7.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "1153c11ae87076ae6621cdc5d7329613c33efc385af2aabe3f954ec07174675d"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
