--- a/folder/10_05_실습.ipynb
+++ b/folder/10_05_실습.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"From: rych@festival.ed.ac.uk (R Hawkes)\\nSubject: 3DS: Where did all the texture rules go?\\nLines: 21\\n\\nHi,\\n\\nI've noticed that if you only save a model (with all your mapping planes\\npositioned carefully) to a .3DS file that when you reload it after restarting\\n3DS, they are given a default position and orientation.  But if you save\\nto a .PRJ file their positions/orientation are preserved.  Does anyone\\nknow why this information is not stored in the .3DS file?  Nothing is\\nexplicitly said in the manual about saving texture rules in the .PRJ file. \\nI'd like to be able to read the texture rule information, does anyone have \\nthe format for the .PRJ file?\\n\\nIs the .CEL file format available from somewhere?\\n\\nRych\\n\\n======================================================================\\nRycharde Hawkes\\t\\t\\t\\temail: rych@festival.ed.ac.uk\\nVirtual Environment Laboratory\\nDept. of Psychology\\t\\t\\tTel  : +44 31 650 3426\\nUniv. of Edinburgh\\t\\t\\tFax  : +44 31 667 0150\\n======================================================================\\n\""
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newsgroups_train.data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +71,7 @@
        "0.8821359240272957"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,16 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8056885932187253"
+       "0.795860567354925"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +123,7 @@
        "0.8575634662448817"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,40 +138,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8263688049753513"
+       "0.8253148930961691"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "et = GradientBoostingClassifier()\n",
-    "et.fit(vectors, newsgroups_train.target)\n",
-    "et_pred = et.predict(vectors_test)\n",
-    "metrics.f1_score(newsgroups_test.target, et_pred, average='macro')"
+    "xbg = GradientBoostingClassifier()\n",
+    "xbg.fit(vectors, newsgroups_train.target)\n",
+    "xbg_pred = xbg.predict(vectors_test)\n",
+    "metrics.f1_score(newsgroups_test.target, xbg_pred, average='macro')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8590360257024072"
+       "0.8860668559688594"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +189,7 @@
     "from sklearn.ensemble import VotingClassifier\n",
     "\n",
     "ensemble_clf = VotingClassifier(estimators=[\n",
-    "        ('nb', clf), ('rf', rf), ('lr', lr),('et',et)],voting='hard')\n",
+    "        ('nb', clf), ('rf', rf), ('lr', lr),('xbg',xbg)],voting='soft')\n",
     "ensemble_clf.fit(vectors,newsgroups_train.target)\n",
     "ensemble_pred = ensemble_clf.predict(vectors_test)\n",
     "metrics.f1_score(newsgroups_test.target, ensemble_pred, average='macro')"
@@ -190,7 +219,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.7.13 ('nlp_env')",
    "language": "python",
    "name": "python3"
   },
@@ -204,12 +233,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "fad66b49e447adccf4a72fafa30beface3cf80f22c550ec65a98d8d729879873"
+    "hash": "3d5f8d486bd050c94a6e9429297e6669528901ab188ae91bafb7a9ea614fd771"
    }
   }
  },
